sistem de autentificare sters _LoginPartial

--- a/proiect-daw/proiect-daw.csproj
+++ b/proiect-daw/proiect-daw.csproj
@@ -20,6 +20,16 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Compile Remove="Views\Auth\Login.cshtml.cs" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Content Remove="Views\Auth\Login.cshtml" />
+    <Content Remove="Views\Shared\ArticleInfo.cshtml" />
+    <Content Remove="Views\Shared\_LoginPartial.cshtml" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.Diagnostics.EntityFrameworkCore" Version="8.0.11" />
     <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="8.0.11" />
     <PackageReference Include="Microsoft.AspNetCore.Identity.UI" Version="8.0.11" />
